# solana-pda-analyser

./: .dockerignore  .env.example  .gitignore  API_EXAMPLES.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.test  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  TESTING.md  config.toml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  test_api.sh
crates/analyzer/: Cargo.toml
crates/analyzer/src/: client.rs  lib.rs  patterns.rs  processor.rs
crates/analyzer/tests/: pattern_tests.rs
crates/api/: Cargo.toml
crates/api/src/: error.rs  handlers.rs  handlers_simple.rs  lib.rs  middleware.rs  routes.rs  routes_simple.rs  server.rs  server_simple.rs
crates/api/tests/: api_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/migrations/: 001_initial_schema.sql
crates/core/src/: database.rs  error.rs  lib.rs  pda.rs  transaction.rs  types.rs
crates/core/tests/: pda_tests.rs  transaction_tests.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs  migrations.rs  models.rs  repository.rs
crates/database/tests/: integration_tests.rs
examples/: Cargo.toml  README.md  demo_output.md  display_demo.rs  example_runner.rs  formatted_analysis_display.rs  metaplex_examples.rs  real_world_examples.rs  spl_token_examples.rs  working_examples.rs
migrations/: 001_initial_schema.sql
scripts/: run_tests.sh
tests/: Cargo.toml  README.md  api_client_tests.rs  benchmark.rs  e2e_test.sh  integration_test.py  integration_tests.rs  performance_test.py  performance_tests.rs
web/: index.html
web/css/: style.css
web/js/: api.js  app.js
