[workspace]
members = [
    "crates/core",
    "crates/cli"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "3.2", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bs58 = "0.4"
sha2 = "0.10"
hex = "0.4"
solana-sdk = "1.14"
solana-program = "1.14"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
spl-token = "3.5"