[package]
name = "solana-pda-analyzer-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "integration_tests"
path = "integration_tests.rs"

[[bin]]
name = "api_client_tests"
path = "api_client_tests.rs"

[[bin]]
name = "performance_tests"
path = "performance_tests.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }