[package]
name = "solana-pda-analyzer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-pda-analyzer-core = { path = "../core" }
solana-pda-analyzer-database = { path = "../database" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
solana-sdk = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
# reqwest = { workspace = true }