[package]
name = "solana-pda-analyzer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
bs58 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
spl-token = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }